--- a/public/testquiz.html
+++ b/public/testquiz.html
@@ -40,7 +40,7 @@
       <div class="Head">
         <div class="Logo">
           <a href="index.html">
-            <img data-asset-src="assets/images/mainLogo.png" alt="MBTIZOO바로가기">
+            <img data-asset-src="assets/images/mainLogo.png" data-asset-resize="width=360,quality=90,format=auto" alt="MBTIZOO바로가기" decoding="async">
           </a>
         </div>
       </div>
