Enhance image handling and caching strategies in asset management
- Updated the `cacheControlForKey` function to include versioning support for cache-busted URLs, allowing for aggressive caching of versioned assets.
- Modified multiple HTML files to improve image loading performance by adding `data-asset-resize`, `data-asset-srcset`, and `data-asset-sizes` attributes for responsive images.
- Implemented lazy loading for images in various templates, optimizing resource loading and enhancing user experience.
- Refactored JavaScript functions to support new asset attributes, ensuring consistent handling of image assets across the application.

--- a/public/testquiz.html
+++ b/public/testquiz.html
@@ -40,7 +40,7 @@
       <div class="Head">
         <div class="Logo">
           <a href="index.html">
-            <img data-asset-src="assets/images/mainLogo.png" data-asset-resize="width=360,quality=90,format=auto" alt="MBTIZOO바로가기" decoding="async">
+            <img data-asset-src="assets/images/mainLogo.png" data-asset-resize="width=360,quality=90,format=auto" alt="MBTIZOO바로가기" decoding="async" fetchpriority="high">
           </a>
         </div>
       </div>
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="TestImg">
-        <img alt="테스트 이미지">
+        <img alt="테스트 이미지" width="350" height="350" decoding="async" fetchpriority="high">
       </div>
       <div class="TestSelectBtn">
         <button type="button" class="select1"></button>
