--- a/public/testresult.html
+++ b/public/testresult.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="styles/testintro.css">
     <link rel="stylesheet" href="styles/testresult.css">
     <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
-  <script src="./scripts/config.js" defer></script>
+    <script src="./scripts/config.js" defer></script>
 </head>
 
 <body>
@@ -42,7 +42,7 @@
             <div class="Head">
                 <div class="Logo">
                     <a href="index.html">
-                        <img data-asset-src="assets/images/mainLogo.png" data-asset-resize="width=360,quality=90,format=auto" alt="MBTIZOO바로가기" decoding="async">
+                        <img data-asset-src="assets/images/mainLogo.png" data-asset-resize="width=360,quality=90,format=auto" alt="MBTIZOO바로가기" decoding="async" fetchpriority="high">
                     </a>
                 </div>
                 <div class="HeaderGnb holographic-container">
@@ -54,18 +54,18 @@
         </header>
         <main class="ResultShell">
             <div class="ResultShellImg">
-                <img alt="결과 이미지">
+                <img alt="결과 이미지" width="350" height="350" decoding="async" fetchpriority="high">
             </div>
             <div class="ResultShellTextBox">
                 <div class="ResultBtnShell">
                     <div class="Restart">
                         <button type="button">
-                            <img data-asset-src="assets/images/TestRestart.png" alt="테스트 다시하기">
+                            <img data-asset-src="assets/images/TestRestart.png" data-asset-resize="width=292,quality=90,format=auto" alt="테스트 다시하기" decoding="async">
                         </button>
                     </div>
                     <div class="TestShare">
                         <button type="button">
-                            <img data-asset-src="assets/images/TestShare.png" alt="공유하기">
+                            <img data-asset-src="assets/images/TestShare.png" data-asset-resize="width=292,quality=90,format=auto" alt="공유하기" decoding="async">
                         </button>
                     </div>
                 </div>
@@ -75,16 +75,16 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img class="icon" data-asset-src="assets/images/instagram.png" alt="인스타그램 바로가기">
+                        <img class="icon" data-asset-src="assets/images/instagram.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="인스타그램 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
                     </a>
                     <a href="#">
-                        <img class="icon" data-asset-src="assets/images/katalk.png" alt="카카오톡 바로가기">
+                        <img class="icon" data-asset-src="assets/images/katalk.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="카카오톡 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
                     </a>
                     <a href="#">
-                        <img class="icon" data-asset-src="assets/images/naver.png" alt="네이버 바로가기">
+                        <img class="icon" data-asset-src="assets/images/naver.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="네이버 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
                     </a>
                     <a href="mailto:dreamp0403@gmail.com">
-                        <img class="icon" data-asset-src="assets/images/mail.png" alt="메일 바로가기">
+                        <img class="icon" data-asset-src="assets/images/mail.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="메일 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
                     </a>
                 </li>
             </ul>
