--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="preload" as="image" href="/cdn-cgi/image/width=360,quality=90,format=auto/assets/images/mainLogo.png" fetchpriority="high" data-skip-local="true">
-  <link rel="preload" as="image" href="/cdn-cgi/image/width=1230,quality=85,fit=cover,format=auto/assets/images/mainbanner.png" fetchpriority="high" data-skip-local="true">
+  <link rel="preload" as="image" href="/cdn-cgi/image/width=1230,quality=85,fit=cover,format=auto/assets/images/mainbanner.png" imagesrcset="/cdn-cgi/image/width=480,quality=80,fit=cover,format=auto/assets/images/mainbanner.png 480w, /cdn-cgi/image/width=768,quality=82,fit=cover,format=auto/assets/images/mainbanner.png 768w, /cdn-cgi/image/width=1230,quality=85,fit=cover,format=auto/assets/images/mainbanner.png 1230w" imagesizes="(max-width: 900px) 100vw, 1230px" fetchpriority="high" data-skip-local="true">
   <link rel="shortcut icon" data-asset-href="assets/images/favicon.png" type="image/x-icon">
   <script>
     // Local dev: disable preloads to avoid noisy "preloaded but not used" warnings
@@ -71,12 +71,12 @@
     <main id="MainTop">
       <div class="MainBanner">
         <a href="./testlist.html">
-          <img src="/cdn-cgi/image/width=1230,quality=85,fit=cover,format=auto/assets/images/mainbanner.png" data-asset-src="assets/images/mainbanner.png" data-asset-resize="width=1230,quality=85,fit=cover,format=auto" alt="테스트 리스트로 바로가기" decoding="async" fetchpriority="high">
+          <img src="/cdn-cgi/image/width=1230,quality=85,fit=cover,format=auto/assets/images/mainbanner.png" data-asset-src="assets/images/mainbanner.png" data-asset-resize="width=1230,quality=85,fit=cover,format=auto" data-asset-srcset="480,768,1230" data-asset-sizes="(max-width: 900px) 100vw, 1230px" alt="테스트 리스트로 바로가기" decoding="async" fetchpriority="high">
         </a>
       </div>
       <div class="NewTestList">
         <div class="NewTestListTittle">
-          <img data-asset-src="assets/images/new.png" alt="">
+          <img data-asset-src="assets/images/new.png" data-asset-resize="width=64,quality=85,fit=cover,format=auto" alt="" decoding="async">
           <p>따뜻한 최신 심테</p>
         </div>
         <div class="NewTestListShell">
@@ -93,7 +93,7 @@
       </div>
       <div class="NewTestList">
         <div class="NewTestListTittle">
-          <img class="fire" data-asset-src="assets/images/fire.png" alt="">
+          <img class="fire" data-asset-src="assets/images/fire.png" data-asset-resize="width=48,height=48,quality=85,fit=cover,format=auto" alt="" decoding="async">
           <p>TOP 심테</p>
         </div>
         <div class="NewTestListShell">
@@ -120,16 +120,16 @@
       <ul>
         <li>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/instagram.png" alt="인스타그램 바로가기">
+            <img class="icon" data-asset-src="assets/images/instagram.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="인스타그램 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/katalk.png" alt="카카오톡 바로가기">
+            <img class="icon" data-asset-src="assets/images/katalk.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="카카오톡 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/naver.png" alt="네이버 바로가기">
+            <img class="icon" data-asset-src="assets/images/naver.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="네이버 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="mailto:dreamp0403@gmail.com">
-            <img class="icon" data-asset-src="assets/images/mail.png" alt="메일 바로가기">
+            <img class="icon" data-asset-src="assets/images/mail.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="메일 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
         </li>
       </ul>
