--- a/public/testintro.html
+++ b/public/testintro.html
@@ -41,7 +41,7 @@
       <div class="Head">
         <div class="Logo">
           <a href="index.html">
-            <img data-asset-src="assets/images/mainLogo.png" data-asset-resize="width=360,quality=90,format=auto" alt="MBTIZOO바로가기" decoding="async">
+            <img data-asset-src="assets/images/mainLogo.png" data-asset-resize="width=360,quality=90,format=auto" alt="MBTIZOO바로가기" decoding="async" fetchpriority="high">
           </a>
         </div>
         <div class="HeaderGnb holographic-container">
@@ -53,7 +53,7 @@
     </header>
     <main class="TestIntroShell">
       <div class="IntroShellImg">
-        <img alt="테스트 썸네일">
+        <img alt="테스트 썸네일" width="350" height="400" decoding="async" fetchpriority="high">
         <div class="NewTestHashTag">
           <span class="HashTag">#태그</span>
         </div>
@@ -61,7 +61,7 @@
       <div class="IntroShellTextBox">
         <h2>테스트 이름</h2>
         <div class="Creator">
-          <img alt="제작자 이미지">
+          <img alt="제작자 이미지" width="24" height="24" decoding="async">
           <p class="CreatorName">
             제작자 이름
           </p>
@@ -72,12 +72,12 @@
         <div class="IntroBtnShell">
           <div class="TestStart">
             <button type="button">
-              <img data-asset-src="assets/images/TestStart.png" alt="테스트 시작버튼">
+              <img data-asset-src="assets/images/TestStart.png" data-asset-resize="width=292,quality=90,format=auto" alt="테스트 시작버튼" decoding="async">
             </button>
           </div>
           <div class="TestShare">
             <button type="button">
-              <img data-asset-src="assets/images/TestShare.png" alt="테스트 공유버튼">
+              <img data-asset-src="assets/images/TestShare.png" data-asset-resize="width=292,quality=90,format=auto" alt="테스트 공유버튼" decoding="async">
             </button>
           </div>
         </div>
@@ -87,16 +87,16 @@
       <ul>
         <li>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/instagram.png" alt="인스타그램 바로가기">
+            <img class="icon" data-asset-src="assets/images/instagram.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="인스타그램 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/katalk.png" alt="카카오톡 바로가기">
+            <img class="icon" data-asset-src="assets/images/katalk.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="카카오톡 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/naver.png" alt="네이버 바로가기">
+            <img class="icon" data-asset-src="assets/images/naver.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="네이버 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="mailto:dreamp0403@gmail.com">
-            <img class="icon" data-asset-src="assets/images/mail.png" alt="메일 바로가기">
+            <img class="icon" data-asset-src="assets/images/mail.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="메일 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
         </li>
       </ul>
