--- a/public/testlist.html
+++ b/public/testlist.html
@@ -70,16 +70,16 @@
       <ul>
         <li>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/instagram.png" alt="인스타그램 바로가기">
+            <img class="icon" data-asset-src="assets/images/instagram.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="인스타그램 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/katalk.png" alt="인스타그램 바로가기">
+            <img class="icon" data-asset-src="assets/images/katalk.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="카카오톡 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="#">
-            <img class="icon" data-asset-src="assets/images/naver.png" alt="인스타그램 바로가기">
+            <img class="icon" data-asset-src="assets/images/naver.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="네이버 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
           <a href="mailto:dreamp0403@gmail.com">
-            <img class="icon" data-asset-src="assets/images/mail.png" alt="인스타그램 바로가기">
+            <img class="icon" data-asset-src="assets/images/mail.png" data-asset-resize="width=48,height=48,quality=80,fit=cover,format=auto" alt="메일 바로가기" loading="lazy" decoding="async" data-asset-lazy="true">
           </a>
         </li>
       </ul>
