Enhance caching and preload functionality for test assets
- Updated the `withCacheHeaders` function to support additional caching options, including `sMaxAge` and `staleWhileRevalidate`, improving cache control for API responses.
- Implemented a preload overlay in the HTML to enhance user experience during test loading, providing visual feedback while assets are being fetched.
- Modified JavaScript functions to utilize caching for test data, optimizing performance by reducing redundant API calls and improving response times.
- Enhanced image handling in the test intro and list scripts to support responsive image attributes, ensuring better loading performance across devices.

--- a/public/testintro.html
+++ b/public/testintro.html
@@ -107,6 +107,17 @@
       </div>
     </footer>
   </div>
+
+  <!-- Start preloading overlay (shown only when user clicks Start) -->
+  <div id="preloadOverlay" class="preload-overlay" aria-hidden="true">
+    <div class="preload-skeleton" role="status" aria-live="polite">
+      <div class="skeleton-image"></div>
+      <div class="skeleton-progress" aria-hidden="true">
+        <div class="skeleton-progress-bar" data-preload-progress></div>
+      </div>
+      <p class="skeleton-text" data-preload-text>테스트 준비 중...</p>
+    </div>
+  </div>
 </body>
 
 <script type="module" src="./scripts/testintro.js" crossorigin="anonymous"></script>
